// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux products request reducers update state after PRODUCTS_GET_ALL_REQUEST action 1`] = `
Object {
  "data": null,
  "errors": null,
  "isLoading": true,
}
`;

exports[`Redux products request reducers update state after PRODUCTS_GET_ALL_REQUEST_FAIL action 1`] = `
Object {
  "data": null,
  "errors": "error",
  "isLoading": false,
}
`;

exports[`Redux products request reducers update state after PRODUCTS_GET_ALL_REQUEST_SUCCESS action 1`] = `
Object {
  "data": Array [
    Object {
      "id": 1,
      "img": "img",
      "text": "text",
      "title": "title",
    },
  ],
  "errors": null,
  "isLoading": false,
}
`;
